[package]
authors = ["Al Liu <scygliu1@gmail.com>"]
name = "nodecraft"
description = "Crafting seamless node operations for distributed systems, which provides foundational traits for node identification and address resolution."
homepage = "https://github.com/al8n/nodecraft"
repository = "https://github.com/al8n/nodecraft.git"
documentation = "https://docs.rs/nodecraft/"
readme = "README.md"
version = "0.5.0"
license = "MIT OR Apache-2.0"
keywords = ["node", "async", "distributed-systems"]
categories = ["network-programming", "asynchronous", "development-tools"]
edition = "2021"
rust-version = "1.81.0"

[features]
default = ["std"]
full = ["std", "agnostic", "dns", "resolver", "serde", "tracing"]
alloc = ["smol_str03", "cheap-clone/alloc", "transformable?/alloc"]
std = [
  "alloc",
  "transformable?/std",
  "cheap-clone/std",
  "smol_str03?/std",
  "smol_str02?/std",
  "thiserror/std",
  "serde?/std",
  "humantime-serde",
  "futures?/std",
]

# enable runtime agnostic features
agnostic = ["dep:agnostic-lite", "async", "std"]

# enable async features
async = ["dep:futures", "std", "transformable?/async"]

# enable dns node address resolver
dns = [
  "std",
  "resolver",
  "dep:hickory-resolver",
  "crossbeam-skiplist/default",
  "async",
  "agnostic-dns",
]
dns-over-quic = ["dns", "agnostic-dns/dns-over-quic"]
dns-over-h3 = ["dns", "agnostic-dns/dns-over-h3"]
dns-over-https-rustls = ["dns", "agnostic-dns/dns-over-https-rustls"]
dns-over-rustls = ["dns", "agnostic-dns/dns-over-rustls"]
dns-over-openssl = ["dns", "agnostic-dns/dns-over-openssl"]
dns-over-native-tls = ["dns", "agnostic-dns/dns-over-native-tls"]
dns-webpki-roots = ["dns", "agnostic-dns/dns-webpki-roots"]
dns-native-certs = ["dns", "agnostic-dns/dns-native-certs"]
dnssec-openssl = ["dns", "agnostic-dns/dnssec-openssl"]
dnssec-ring = ["dnssec", "agnostic-dns/dnssec-ring"]
dnssec = ["dns", "agnostic-dns/dnssec"]

smol_str02 = ["dep:smol_str02", "alloc", "transformable/smol_str02", "cheap-clone/smol_str02"]
smol_str03 = ["dep:smol_str03", "alloc", "transformable/smol_str03", "rkyv/smol_str-0_3"]

# enable node address resolver
resolver = ["async", "crossbeam-skiplist/default", "std"]

serde = [
  "dep:serde",
  "smol_str02?/serde",
  "smol_str03?/serde",
  "humantime-serde",
  "hickory-resolver?/serde-config",
]
rkyv = ["dep:rkyv"]

transformable = ["dep:transformable"]

# enable tracing
tracing = ["dep:tracing"]

[dependencies]
cheap-clone = { version = "0.2", default-features = false, features = [
  "smol_str03",
] }

agnostic-lite = { version = "0.4", optional = true }
agnostic-dns = { version = "0.1", optional = true }
byteorder = "1"
futures = { version = "0.3", default-features = false, optional = true }
thiserror = { version = "2", default-features = false }
transformable = { version = "0.2", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true, features = [
  "derive",
] }
humantime-serde = { version = "1", default-features = false, optional = true }

smol_str02 = { package = "smol_str", version = "0.2", default-features = false, optional = true }
smol_str03 = { package = "smol_str", version = "0.3", default-features = false, optional = true }

hickory-resolver = { version = "0.24", default-features = false, optional = true }
crossbeam-skiplist = { version = "0.1", optional = true }

tracing = { version = "0.1", optional = true }

rkyv = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9"
serde_json = "1"
bincode = "1"
agnostic-dns = { version = "0.1", features = ["tokio"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
